# EasySymbol

./: .gitignore  CMakeLists.txt  README.md  README_zh_CN.md  res.qrc
include/: consts.h  fileHandler.h  helpDialog.h  logger.h  mainWindow.h  searchEngine.h  utils.h
resources/docs/: README.html  README.md
resources/qss/: style.qss
src/: fileHandler.cpp  helpDialog.cpp  logger.cpp  main.cpp  mainWindow.cpp  popup.cpp  searchEngine.cpp
test/: custom.txt
ui/: helpDialog.ui  mainWindow.ui
